Frpc impl #6: Proxy Creation